--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -23,5 +23,6 @@ br
     button onclick="hide()" class="btn btn-danger btn-sm" Cancel
 br
 .answers
-  = render @answers
+  .render-answers
+    = render @answers
 
