--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,7 +1,10 @@
 $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
 
 <% if @answer.persisted? %>
+  <% @best_answer = @question.answers.find_by(best: true) %>
   $('.answers').prepend('<%= j render @answer %>');
+  $('.answer_<%= @best_answer.id %>').remove();
+  $('.answers').prepend('<%= j render @best_answer %>');
   $('.new-answer #answer_body').val('');
   $('#addAnswerForm').hide();
   $('#addAnswerButton').show();
