fix add links for answers

--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,6 +1,6 @@
 h2
   - if signed_in?
-    = link_to 'Ask question', new_question_path
+    = link_to 'Ask question', new_question_path, class: 'btn btn-warning'
 
 h1 All questions
 
