--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -4,7 +4,7 @@ h1 New question
   = render 'shared/errors', resource: @question
 
 br
-= semantic_form_for @question, id: "edit-question-#{@question.id}", local: true do |f|
+= form_with model: @question, id: "edit-question-#{@question.id}", local: true do |f|
   p
     = f.label 'title'
     br
@@ -17,11 +17,11 @@ br
     = f.label :files
     br
     = f.file_field :files, multiple: true, direct_upload: true
-  p Links:
-  p
-    = f.semantic_fields_for :links do |link|
-      = render 'shared/link_fields', f: link
-    .links
-      = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields'
 
-  p= f.submit 'Save'
+  = f.fields_for :links do |link|
+    / = render 'shared/link_fields', f: link
+  .links
+    = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields', class: 'btn btn-primary btn-sm'
+
+  br
+  p= f.submit 'Save', class: 'btn btn-success'
