--- a/app/views/shared/_link_fields.html.slim
+++ b/app/views/shared/_link_fields.html.slim
@@ -1,9 +1,8 @@
 .nested-fields
-  = f.inputs do
-    p
-      = f.label :name, 'Link name'
-      = f.text_field :name
-    p
-      = f.label :url
-      = f.text_field :url
-    p= link_to_remove_association "clear link", f
+  p
+    = f.text_field :name
+    = f.label :name, 'Link name'
+  p
+    = f.text_field :url
+    = f.label :url
+  p= link_to_remove_association "clear link", f, class: 'btn btn-danger btn-sm'
