--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -26,14 +26,11 @@ div class="answer_#{answer.id}"
           = f.label :files
           br
           = f.file_field :files, multiple: true, direct_upload: true
-        p Links:
-        p
-          = f.fields_for :links do |l|
-            p
-              = l.label :name, 'Link name'
-              = l.text_field :name
-            p
-              = l.label :url
-              = l.text_field :url
+
+        = f.fields_for :links do |link|
+          / = render 'shared/link_fields', f: link
+        .links
+          = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields', class: 'btn btn-primary btn-sm'
+
         p= f.submit
         br
