--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -21,7 +21,7 @@ div class="answer_#{answer.id}"
         p
           = f.label :body
         p
-          = f.text_area :body
+          = f.text_area :body, cols: "70"
         p
           = f.label :files
           br
