--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -13,7 +13,7 @@ br
       p
         = f.label :body
         br
-        = f.text_area :body
+        = f.text_area :body, cols: "70"
       p
         = f.label :files
         br
