--- a/app/views/shared/_links.html.slim
+++ b/app/views/shared/_links.html.slim
@@ -4,6 +4,7 @@
     ul
       - resource.links.each do |link|
         - if link.gist?
-          | <script src="https://gist.github.com/#{link.gist_id}.js"></script>
+          div class="gist-link" style="width: 50%"
+            | <script src="https://gist.github.com/#{link.gist_id}.js"></script>
         - else
           li= link_to link.name, link.url, target: "_blank"
