--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -2,4 +2,11 @@ $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
 
 <% unless @answer.errors.present? %>
   $('.answers').html('<%= j render @question.answers %>');
+
+  <% @answer.links.each do |link| %>
+    <% if link.gist? %>
+      document.location.reload(true)
+      <% break %>
+    <% end %>
+  <% end %>
 <% end %>
