--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -18,7 +18,7 @@ div class="question_#{question.id}"
       p
         = f.label 'body'
         br
-        = f.text_area :body
+        = f.text_area :body, cols: "70"
       p
         = f.label :files
         br
