--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -12,7 +12,7 @@ br
   p
     = f.label 'body'
     br
-    = f.text_area :body
+    = f.text_area :body, cols: "70"
   p
     = f.label :files
     br
