--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -2,5 +2,12 @@ $('.question-errors').html('<%= render 'shared/errors', resource: @question %>')
 
 <% unless @question.errors.present? %>
   $('.question_<%= @question.id %>').html('<%= j render @question %>');
+
+  <% @question.links.each do |link| %>
+    <% if link.gist? %>
+      document.location.reload(true)
+      <% break %>
+    <% end %>
+  <% end %>
 <% end %>
 
