--- a/app/views/shared/_links.html.slim
+++ b/app/views/shared/_links.html.slim
@@ -1,10 +1,13 @@
 .links
   - if resource.links.present?
-    span Links:
     ul
       - resource.links.each do |link|
-        - if link.gist?
-          div class="gist-link" style="width: 50%"
-            | <script src="https://gist.github.com/#{link.gist_id}.js"></script>
-        - else
-          li= link_to link.name, link.url, target: "_blank"
+        div id="link_#{link.id}"
+          - if link.gist?
+            div class="gist-link" style="width: 50%"
+              | <script src="https://gist.github.com/#{link.gist_id}.js"></script>
+          - else
+            li
+              = link_to link.name, link.url, target: "_blank"
+          - if current_user&.creator?(link.linkable)
+            = link_to 'delete link', link_path(link), method: :delete, class: 'text-danger', remote: true
