--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -19,9 +19,10 @@ br
     = f.file_field :files, multiple: true, direct_upload: true
 
   = f.fields_for :links do |link|
-    / = render 'shared/link_fields', f: link
+    = render 'shared/link_fields', f: link
   .links
     = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields', class: 'btn btn-primary btn-sm'
+  br
   p Achievement
   = f.fields_for :achievement do |achievement|
     = achievement.label :name
