--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -28,7 +28,7 @@ div class="answer_#{answer.id}"
           = f.file_field :files, multiple: true, direct_upload: true
 
         = f.fields_for :links do |link|
-          / = render 'shared/link_fields', f: link
+          = render 'shared/link_fields', f: link
         .links
           = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields', class: 'btn btn-primary btn-sm'
 
