--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -25,7 +25,7 @@ div class="question_#{question.id}"
         = f.file_field :files, multiple: true, direct_upload: true
 
       = f.fields_for :links do |link|
-        / = render 'shared/link_fields', f: link
+        = render 'shared/link_fields', f: link
       .links
         = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields', class: 'btn btn-primary btn-sm'
 
