--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -18,7 +18,7 @@ br
     br
     = f.file_field :files, multiple: true, direct_upload: true
 
-  .links
+  .add-links
     = f.fields_for :links do |link|
       = render 'shared/link_fields', f: link
     .add-link
