--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -23,10 +23,10 @@ div class="question_#{question.id}"
         = f.label :files
         br
         = f.file_field :files, multiple: true, direct_upload: true
-
-      = f.fields_for :links do |link|
-        = render 'shared/link_fields', f: link
-      .links
-        = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields', class: 'btn btn-primary btn-sm'
+      .add-links
+        = f.fields_for :links do |link|
+          = render 'shared/link_fields', f: link
+        .add-link
+          = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields', class: 'btn btn-primary btn-sm'
 
       p= f.submit 'Save'
