--- a/app/views/achievements/index.html.slim
+++ b/app/views/achievements/index.html.slim
@@ -1,13 +1,2 @@
 h1 Your achievements
-- @user_achievements.each do |award|
-  div id="achievement_#{award.id}"
-    - if award.image.attached?
-      = image_tag(award.image_thumbnail)
-    '
-    = award.name
-    '
-    - if award.question.present?
-      span Award of question
-      '
-      = link_to award.question.title, question_path(award.question)
-    br
+= render @achievements
