--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -18,11 +18,7 @@ br
         = f.label :files
         br
         = f.file_field :files, multiple: true, direct_upload: true, class: "btn btn-warning btn-sm"
-
-      = f.fields_for :links do |link|
-        = render 'shared/link_fields', f: link
-      .links
-        = link_to_add_association 'add link', f, :links, partial: 'shared/link_fields', class: 'btn btn-primary btn-sm'
+      = render 'shared/add_links', f: f
 
       p= f.submit class: "btn btn-success btn-sm"
     button onclick="hide()" class="btn btn-danger btn-sm" Cancel
