--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -17,7 +17,7 @@ br
     = f.label :files
     br
     = f.file_field :files, multiple: true, direct_upload: true
-  = render 'shared/add_links', f: f
+  = render 'links/add_links', f: f
     br
   div class="achievement"
     p Achievement
