--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -18,7 +18,7 @@ br
         = f.label :files
         br
         = f.file_field :files, multiple: true, direct_upload: true, class: "btn btn-warning btn-sm"
-      = render 'shared/add_links', f: f
+      = render 'links/add_links', f: f
 
       p= f.submit class: "btn btn-success btn-sm"
     button onclick="hide()" class="btn btn-danger btn-sm" Cancel
