--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,24 +4,24 @@
 br
 
 - if signed_in?
-  button onclick="hide()" class="btn btn-warning" id="addAnswerButton" Add answer
+  / button onclick="hide()" class="btn btn-warning" id="addAnswerButton" Add answer
   br
-  div id="addAnswerForm" style="display: none"
-    .answer-errors
-      = render 'shared/errors', resource: @answer
-    = form_with model: [@question, @answer], class: 'new-answer' do |f|
-      p
-        = f.label :body
-        br
-        = f.text_area :body, cols: "70"
-      p
-        = f.label :files
-        br
-        = f.file_field :files, multiple: true, direct_upload: true, class: "btn btn-warning btn-sm"
-      = render 'links/add_links', f: f
+  / div id="addAnswerForm" style="display: none"
+  .answer-errors
+    = render 'shared/errors', resource: @answer
+  = form_with model: [@question, @answer], class: 'new-answer' do |f|
+    p
+      = f.label :body
+      br
+      = f.text_area :body, cols: "70"
+    p
+      = f.label :files
+      br
+      = f.file_field :files, multiple: true, direct_upload: true, class: "btn btn-warning btn-sm"
+    = render 'links/add_links', f: f
 
-      p= f.submit class: "btn btn-success btn-sm"
-    button onclick="hide()" class="btn btn-danger btn-sm" Cancel
+    p= f.submit class: "btn btn-success btn-sm"
+  / button onclick="hide()" class="btn btn-danger btn-sm" Cancel
 br
 .answers
   = render @answers
