--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,9 +7,10 @@ br
   / button onclick="hide()" class="btn btn-warning" id="addAnswerButton" Add answer
   br
   / div id="addAnswerForm" style="display: none"
-  div class="answer-errors"
-    = render 'shared/errors', resource: @answer
-  = form_with model: [@question, @answer], class: 'new-answer' do |f|
+  .json-answer-errors
+  = form_with model: [@question, @answer], class: 'new-answer', data: { type: :json } do |f|
+    div class="answer-errors"
+      = render 'shared/errors', resource: @answer
     p
       = f.label :body
       br
