--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -11,8 +11,8 @@ $(".answer-errors").html('<%= render 'shared/errors', resource: @answer %>');
   <% end %>
 
   $('.new-answer #answer_body').val('');
-  $('#addAnswerForm').hide();
-  $('#addAnswerButton').show();
+//  $('#addAnswerForm').hide();
+//  $('#addAnswerButton').show();
 
 <% end %>
 
