--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,8 +7,9 @@ br
   / button onclick="hide()" class="btn btn-warning" id="addAnswerButton" Add answer
   br
   / div id="addAnswerForm" style="display: none"
-  .json-answer-errors
-  = form_with model: [@question, @answer], class: 'new-answer', data: { type: :json } do |f|
+
+  / = form_with model: [@question, @answer], class: 'new-answer', data: { type: :json } do |f|
+  = form_with model: [@question, @answer], class: 'new-answer' do |f|
     div class="answer-errors"
       = render 'shared/errors', resource: @answer
     p
