created function object rating

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -14,6 +14,8 @@ div class="answer_#{answer.id}"
       - if current_user&.creator?(answer.question)
         '
         = link_to 'Make it best', select_best_answer_path(answer), method: :patch, remote: true, class: 'text-success'
+      br
+      = render 'ratings/object_rating', resource: answer
 
       = form_with model: answer, class: 'hidden', html: {id: "edit-answer-#{answer.id}"} do |f|
         / div class="answer-#{answer.id}-errors"
