--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -8,6 +8,9 @@ div class="question_#{question.id}"
     = link_to 'Edit question', '#', class: 'edit-question-link text-warning', data: { question_id: question.id }
     '
     = link_to 'Delete question', question_path(question), method: :delete, class: 'text-danger'
+
+    = render 'ratings/object_rating', resource: question
+
     = form_with model: @question, id: "edit-question-#{question.id}", class: 'edit_question' do |f|
       .question-errors
         = render 'shared/errors', resource: question
