done unit rating model

--- a/app/views/ratings/_rating.html.slim
+++ b/app/views/ratings/_rating.html.slim
@@ -1,15 +1,14 @@
 .change-rating
   - if signed_in? && !current_user&.creator?(resource.ratingable)
-    - @styles = check_vote_for_rating(resource, current_user)
 
     = link_to 'clear vote', clear_vote_from_rating_path(resource), method: :patch,
             class: "clear_vote-rating_#{resource.id} btn btn-outline-warning btn-sm",
-            remote: true, style: @styles[1]
+            remote: true, style: check_vote_for_rating(resource, current_user)[1]
     '
     = link_to '-', down_rating_path(resource), method: :patch,
             class: "down-rating_#{resource.id} btn btn-outline-danger btn-sm",
-            remote: true, style: @styles[0]
+            remote: true, style: check_vote_for_rating(resource, current_user)[0]
     '
     = link_to '+', up_rating_path(resource), method: :patch,
             class: "up-rating_#{resource.id} btn btn-outline-success btn-sm",
-            remote: true, style: @styles[0]
+            remote: true, style: check_vote_for_rating(resource, current_user)[0]
