--- a/app/views/ratings/clear_vote_from.js.erb
+++ b/app/views/ratings/clear_vote_from.js.erb
@@ -1,2 +1,2 @@
 $(".change-rating_<%= @rating.id %>").empty();
-$(".change-rating_<%= @rating.id %>").append("<%= render 'ratings/rating', resource: @rating %>");
+$(".change-rating_<%= @rating.id %>").html("<%= j render 'ratings/rating', resource: @rating %>");
