--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -5,11 +5,22 @@ div class="question_#{question.id}"
   = render 'shared/attachment_actions', resource: question
 
   br
-  div class="rating_#{question.rating.id}"
-    h5= question.rating.value
-  - if signed_in? && !current_user&.creator?(question.rating.ratingable)
-    div class="change-rating_#{question.rating.id}"
-      = render 'ratings/rating', resource: question.rating
+
+  p
+    span Votes rating:
+    = question.votes.sum(:value)
+    br
+    span Votes count:
+    = question.votes.count
+
+  h4
+    span Add you vote
+    br
+    = link_to 'Vote Up', give_vote_path('Question', question.id, 1), method: :post
+    br
+    = link_to 'Vote Down', give_vote_path('Question', question.id, -1), method: :post
+    br
+    = link_to 'Pick up Vote', pick_up_vote_path(question.id), method: :delete
 
   - if current_user&.creator?(question)
     = link_to 'Edit question', '#', class: 'edit-question-link text-warning', data: { question_id: question.id }
