--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -6,21 +6,10 @@ div class="question_#{question.id}"
 
   br
 
-  p
-    span Votes rating:
-    = question.votes.sum(:value)
-    br
-    span Votes count:
-    = question.votes.count
+  h3= render "votes/votes_rating", resource: question
 
-  h4
-    span Add you vote
-    br
-    = link_to 'Vote Up', give_vote_path('Question', question.id, 1), method: :post
-    br
-    = link_to 'Vote Down', give_vote_path('Question', question.id, -1), method: :post
-    br
-    = link_to 'Pick up Vote', pick_up_vote_path(question.id), method: :delete
+  .change-rating
+    = render "votes/vote_actions", resource: question
 
   - if current_user&.creator?(question)
     = link_to 'Edit question', '#', class: 'edit-question-link text-warning', data: { question_id: question.id }
