--- a/app/views/votes/_votes_rating.html.slim
+++ b/app/views/votes/_votes_rating.html.slim
@@ -1,3 +1,22 @@
 span Votes rating:
 span class="rating-#{resource.class.to_s.downcase}_#{resource.id}"
   = resource.votes.sum(:value)
+
+.change-rating
+  | Your vote:
+  br
+  - if current_user&.not_creator?(resource)
+    = link_to 'Vote clear', polymorphic_path(resource, action: :vote_clear), method: :post, remote: true,
+            class: 'btn btn-outline-warning btn-sm',
+            style: vote_present?(resource)[1],
+            id: "vote-clear-#{resource.class.to_s.downcase}_#{resource.id}"
+    '
+    = link_to 'Vote up', polymorphic_path(resource, action: :vote_up), method: :post, remote: true,
+            class: 'btn btn-outline-success btn-sm',
+            style: vote_present?(resource)[0],
+            id: "vote-up-#{resource.class.to_s.downcase}_#{resource.id}"
+    '
+    = link_to 'Vote down', polymorphic_path(resource, action: :vote_down), method: :post, remote: true,
+            class: 'btn btn-outline-danger btn-sm',
+            style: vote_present?(resource)[0],
+            id: "vote-down-#{resource.class.to_s.downcase}_#{resource.id}"
