--- a/app/views/votes/_votes_rating.html.slim
+++ b/app/views/votes/_votes_rating.html.slim
@@ -1,6 +1,6 @@
 span Votes rating:
 span class="rating-#{resource.class.to_s.downcase}_#{resource.id}"
-  = resource.votes.sum(:value)
+  = resource.rating
 
 .change-rating
   | Your vote:
