--- a/app/views/votes/_votes_rating.html.slim
+++ b/app/views/votes/_votes_rating.html.slim
@@ -7,16 +7,16 @@ span class="rating-#{resource.class.to_s.downcase}_#{resource.id}"
   br
   - if current_user&.not_creator?(resource)
     = link_to 'Vote clear', polymorphic_path(resource, action: :vote_clear), method: :post, remote: true,
-            class: 'btn btn-outline-warning btn-sm',
-            style: vote_present?(resource)[1],
+            class: "btn btn-outline-warning btn-sm",
+            style: "#{'display: none' unless resource.voted?(current_user)}",
             id: "vote-clear-#{resource.class.to_s.downcase}_#{resource.id}"
     '
     = link_to 'Vote up', polymorphic_path(resource, action: :vote_up), method: :post, remote: true,
-            class: 'btn btn-outline-success btn-sm',
-            style: vote_present?(resource)[0],
+            class: "btn btn-outline-success btn-sm",
+            style: "#{'display: none' if resource.voted?(current_user)}",
             id: "vote-up-#{resource.class.to_s.downcase}_#{resource.id}"
     '
     = link_to 'Vote down', polymorphic_path(resource, action: :vote_down), method: :post, remote: true,
-            class: 'btn btn-outline-danger btn-sm',
-            style: vote_present?(resource)[0],
+            class: "btn btn-outline-danger btn-sm",
+            style: "#{'display: none' if resource.voted?(current_user)}",
             id: "vote-down-#{resource.class.to_s.downcase}_#{resource.id}"
