user can add comment for resource

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -36,3 +36,9 @@ div class="answer_#{answer.id}"
 
         p= f.submit
         br
+
+      h5 Comments of question:
+      = render "comments/resource_comments", resource: answer
+      br
+      - if signed_in?
+        = render partial: 'comments/form', locals: { commentable: answer }
