--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for [commentable, Comment.new] do |f|
+= form_with model: [commentable, Comment.new] do |f|
   = f.text_field :body, placeholder: 'add a comment'
   br
   = f.submit
