--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,6 +2,7 @@ doctype html
 html
   head>
     title Step3
+    = Gon::Base.render_data
     = csrf_meta_tags
     = csp_meta_tag
     = action_cable_meta_tag
