unit spec commentable

--- a/app/views/links/_add_links.html.slim
+++ b/app/views/links/_add_links.html.slim
@@ -1,6 +1,6 @@
 .add-links
-  / = f.fields_for :links do |link|
-  /   = render 'links/link_fields', f: link
+  = f.fields_for :links do |link|
+    = render 'links/link_fields', f: link
   .links
     = link_to_add_association 'add link', f, :links, partial: 'links/link_fields', class: 'btn btn-primary btn-sm'
   br
