acceptance for function 'add comments to objects'

--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -1,4 +1,6 @@
 = form_with model: [commentable, Comment.new] do |f|
+  = f.label :body, 'write a comment'
+  br
   = f.text_field :body, placeholder: 'add a comment'
   br
   = f.submit
