selected channels when tries to connect

--- a/app/views/comments/_resource_comments.html.slim
+++ b/app/views/comments/_resource_comments.html.slim
@@ -1,5 +1,3 @@
 h5 Comments:
 div class="comments#{resource.class.to_s}_#{resource.id}"
-  - resource.comments.each do |comment|
-    = comment.body
-    br
+  = render resource.comments
