--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <div class="container">
     <div class="my-0 mr-md-auto font-weight-normal">
-      <%= link_to 'Questions', questions_path, class: 'navbar-brand' %>
+      <%= link_to 'Questions', questions_path, class: 'navbar-brand', id: "indexQuestionButton" %>
     </div>
 
     <% if signed_in? %>
