--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,5 +1,5 @@
 h2
-  - if signed_in?
+  - if can?(:create, Question)
     = link_to 'Ask question', new_question_path, class: 'btn btn-warning'
 
 h1 All questions
